# Kinematics_lib

./: .gitignore  CMakeLists.txt  README.md
Inverse_kinematics/: inverse_kinematics_chatgpt  inverse_kinematics_chatgpt.cpp
Inverse_kinematics_mine/: inverse_kinematics  inverse_kinematics.cpp  inverse_kinematics_4R robot  inverse_kinematics_4R robot.cpp  inverse_kinematics_openManipulator  inverse_kinematics_openManipulator.cpp  pseudo_code_forIK_openManipulator.txt  pseudo_code_for_4R.txt  pseudo_code_for_IK.txt
forward_kinematics/: forward_kinematics_chatgpt  forward_kinematics_chatgpt.cpp
forward_kinematics_mine/: forward_kinematics  forward_kinematics.cpp  pseudo_code_fk.txt
reference_book/: openManipulatorX.pdf:Zone.Identifier  openManipulatorX.pdf_Zone.Identifier
